--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -19,11 +20,13 @@ android {
         buildFeatures {
             dataBinding true
         }
+        multiDexEnabled true
     }
         buildTypes {
             release {
                 minifyEnabled false
                 proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+                multiDexEnabled true
             }
         }
         compileOptions {
@@ -38,11 +41,19 @@ android {
     dependencies {
 
         implementation 'androidx.recyclerview:recyclerview:1.3.2'
-        implementation 'androidx.core:core-ktx:1.12.0'
+        implementation 'androidx.core:core-ktx:1.13.1'
+        implementation 'com.google.gms:google-services:4.4.1'
         implementation 'androidx.appcompat:appcompat:1.6.1'
-        implementation 'com.google.android.material:material:1.11.0'
+        implementation 'com.google.android.material:material:1.12.0'
         implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+        implementation 'com.google.firebase:firebase-auth:23.0.0'
+        implementation 'com.google.firebase:firebase-database-ktx:21.0.0'
+        implementation 'com.google.firebase:firebase-storage-ktx:21.0.0'
+        implementation 'com.google.android.gms:play-services-fido:21.0.0'
+        implementation 'com.google.firebase:firebase-database:21.0.0'
         testImplementation 'junit:junit:4.13.2'
         androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
     }
 
