--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,9 @@ plugins {
 android {
     namespace 'com.example.tugasmcdonarius'
     compileSdk 34
-
+    buildFeatures {
+        dataBinding true
+    }
     defaultConfig {
         applicationId "com.example.tugasmcdonarius"
         minSdk 29
@@ -17,9 +19,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildFeatures {
-            dataBinding true
-        }
+     viewBinding{
+     enabled= true
+}
         multiDexEnabled true
     }
         buildTypes {
@@ -44,6 +46,7 @@ android {
         implementation 'androidx.core:core-ktx:1.13.1'
         implementation 'com.google.gms:google-services:4.4.1'
         implementation 'androidx.appcompat:appcompat:1.6.1'
+        implementation 'com.squareup.picasso:picasso:2.71828'
         implementation 'com.google.android.material:material:1.12.0'
         implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
         implementation 'com.google.firebase:firebase-auth:23.0.0'
@@ -54,6 +57,9 @@ android {
         testImplementation 'junit:junit:4.13.2'
         androidTestImplementation 'androidx.test.ext:junit:1.1.5'
         androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+        implementation 'com.github.bumptech.glide:glide:4.12.0'
+        annotationProcessor 'com.github.bumptech.glide:glide:4.12.0'
 
     }
 
